tests/fixtures/invalid/min_bool_list.py
# Cannot call min() with Bool, List[int]
x = min(True, [1, 2, 3])
